--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dependencies":{"@testing-library/jest-dom":"^5.16.4",
         "@testing-library/react":"^12.1.4",
         "@testing-library/user-event":"^13.5.0",
-        "axios":"^0.26.1","bootstrap":"^5.1.3",
+        "axios":"^0.26.1",
+        "bootstrap":"^5.1.3",
         "react":"^18.0.0",
         "react-bootstrap":"^2.3.0",
         "react-dom":"^18.0.0",
@@ -16,7 +17,7 @@
             "test":"react-scripts test",
             "eject":"react-scripts eject",
             "predeploy":"npm run build",
-            "deploy":"gh-pages -b master -d build"
+            "deploy":"gh-pages -d build"
         },
         "eslintConfig":{"extends":["react-app","react-app/jest"]},
             "browserslist":{"production":[">0.2%","not dead","not op_mini all"],
